--- a/features/config/filters.yml
+++ b/features/config/filters.yml
@@ -23,3 +23,87 @@ property_positive:
       name: 'PLATĪBA (M2)'
       left: '1'
       right: '3000'
+transport_positive:
+  name: 'Car filter'
+  category: 'Transports'
+  sub_categories:
+    - sub_category:
+      title: 'Transports'
+      option: 'Vieglie auto'
+    - sub_category:
+      title: 'Vieglie auto'
+      option: 'Mini'
+    - sub_category:
+      title: 'Lexus'
+      option: 'Lexus IS'
+    - sub_category:
+      title: 'Darbība'
+      option: 'Visi'
+  parameters:
+    - parameter:
+      name: 'CENA (EUR)'
+      left: '1'
+      right: '20000'
+    - parameter:
+      name: 'GADS'
+      left: '1999'
+      right: '2015'
+    - parameter:
+      name: 'NOBRAUKUMS (TŪKST.)'
+      left: '10'
+      right: '500000'
+    - parameter:
+      name: 'TILPUMS'
+      left: '2'
+      right: '4'
+transport_negative:
+  category: 'Transports'
+  sub_categories:
+    - sub_category:
+      title: 'Transports'
+      option: 'Vieglie auto'
+    - sub_category:
+      title: 'Vieglie auto'
+      option: 'Pontiac'
+    - sub_category:
+      title: 'Pontiac'
+      option: 'Pontiac Firebird'
+    - sub_category:
+      title: 'Darbība'
+      option: 'Pārdod'
+  parameters:
+    - parameter:
+      name: 'CENA (EUR)'
+      left: '1'
+      right: '200000'
+    - parameter:
+      name: 'GADS'
+      left: '1999'
+      right: '2000'
+    - parameter:
+      name: 'NOBRAUKUMS (TŪKST.)'
+      left: '10'
+      right: '500000'
+    - parameter:
+      name: 'TILPUMS'
+      left: '5'
+      right: '6'
+work_positive:
+  name: 'Job filter'
+  category: 'Vakances'
+  sub_categories:
+    - sub_category:
+      title: 'Vakances'
+      option: 'Kalējs'
+    - sub_category:
+      title: 'Darbība'
+      option: 'Visi'
+work_negative:
+  category: 'Vakances'
+  sub_categories:
+    - sub_category:
+      title: 'Vakances'
+      option: 'Korektors'
+    - sub_category:
+      title: 'Darbība'
+      option: 'Visi'
